fix alignment

--- a/src/assets/scss/_alpha.scss
+++ b/src/assets/scss/_alpha.scss
@@ -122,6 +122,7 @@ $header-font-family: 'Josefin Sans';
     h2 {
       font-weight: bold;
       font-size: 2rem;
+      text-align: left;
     }
 
     ul {
